--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout: default
 
 {% for post in site.categories['post'] %}
 
-    <a href="{{ post.url }}">{{ post.title }}</a>
+    <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
 
 {% endfor %}
