--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ layout: default
 ---
 <div style="margin-bottom: 3em;"> {{ site.categories['about'] | first | content }} </div>
 
-{% for post in site.categories['post'] %}
+{% assign sorted_pages = site.categories['post'] | sort:"date" %}
+{% for post in sorted_pages  %}
 
-    <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+    <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a><br/>
 
 {% endfor %}
