rcdp.io configuration corrected

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 layout: default
 
 ---
+<script language="javascript">
+	if (document.URL.indexOf("github.io") != -1) {
+		window.location.href = "http://rcdp.io"	
+	}
+    
+</script>
 <div style="margin-bottom: 3em;"> {{ site.categories['about'] | first | content }} </div>
 
 {% assign sorted_pages = site.categories['post'] | sort:"date" %}
